--- a/aict/aict.html
+++ b/aict/aict.html
@@ -121,6 +121,7 @@
                                 <li><a href="">복수의 절대값 엔코더를 이용한 위치 측정 시스템 및 방법</a><span>2018.11.21</span></li>
                             </ul>
                         </div>
+                        <a href="" class="plus_btn"><img src="images/bg_plus.png"></a>
                     </div>
 
                 <div class="photo_slider">
