--- a/aict/aict.html
+++ b/aict/aict.html
@@ -100,7 +100,7 @@
                             </ul>
                         </div>
 
-                        <div class="item on">
+                        <div class="item">
                             <a href="">논문</a>
                             <ul class="content">
                                 <li><a href="">Feeding by common heterotrophic protists on the mixotrophic alga Gymnodnium smaydae</a><span>2018.11.21</span></li>
@@ -111,7 +111,7 @@
                             </ul>
                         </div>
                         
-                        <div class="item on">
+                        <div class="item">
                             <a href="">특허</a>
                             <ul class="content">
                                 <li><a href="">에너지 빅데이터 관리 시스템 및 그 방법</a><span>2018.11.21</span></li>
@@ -315,6 +315,10 @@
     <script>
         $(document).ready(function(){
             $('.slide_wrap').bxSlider();
+        });
+
+        $(document).ready(function(){
+            $('.photo_slider > ul').bxSlider();
         });
     </script>
 </body>
