--- a/aict/aict.html
+++ b/aict/aict.html
@@ -21,7 +21,25 @@
 
                 <nav>
                     <ul>
-                        <li><a href="">연구원 소개</a></li>
+                        <li>
+                            <a href="">연구원 소개</a>
+                            <ul>
+                                <li>
+                                    <a href="">원장소개</a>
+                                    <ul>
+                                        <li><a href="">인사말</a></li>
+                                        <li><a href="">역대원장 소개</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="">일반현황</a></li>
+                                <li><a href="">비전과목표</a></li>
+                                <li><a href="">연구원조직</a></li>
+                                <li><a href="">윤리행동강령</a></li>
+                                <li><a href="">AICT홍보</a></li>
+                                <li><a href="">발전기금</a></li>
+                                <li><a href="">찾아오시는 길</a></li>
+                            </ul>
+                        </li>
                         <li><a href="">연구·사업</a></li>
                         <li><a href="">입주대실</a></li>
                         <li><a href="">연구원 소식</a></li>
