차세대 업데이트

--- a/aict/aict.html
+++ b/aict/aict.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -227,7 +227,59 @@
                             <span>차세대융합기술연구원 위촉연구원 채용공고(파동응용연구센터)</span>
                             <span class="data">2019.11.27</span>
                         </div>
+                    </div>
+
+                    <div class="m_news">
+                        <p>새로운소식</p>
+                        <ul>
+                            <li>
+                                <a href="">
+                                    <i>[계약입찰]</i>
+                                    <span>공공융합플랫폼 관제센터 이전 구축 사업 입찰공고</span>
+                                    <span class="data">2019.12.17</span> 
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="">
+                                    <i>[공지사항]</i>
+                                    <span>「2019 융합기술 스타트업 데모데이」 개최</span>
+                                    <span class="data">2019.12.16</span> 
+                                </a>
+                            </li>
                             
+                            <li>
+                                <a href="">
+                                    <i>[공지사항]</i>
+                                    <span>「2019 융합기술 스타트업 데모데이」 개최 안내</span>
+                                    <span class="data">2019.12.13</span> 
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="">
+                                    <i>[공지사항]</i>
+                                    <span>인쇄(문구)점 위탁운영 임대사업자 선정 발표</span>
+                                    <span class="data">2019.12.13</span> 
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="">
+                                    <i>[언론보도]</i>
+                                    <span>융기원, 미래 과학자의 창의력 길러주는 생활과학교실 개최</span>
+                                    <span class="data">2019.12.13</span> 
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="">
+                                    <i>[언론보도]</i>
+                                    <span>박재연 차세대융합기술연구원 환경자원융합센터장 "해양</span>
+                                    <span class="data">2019.12.12</span> 
+                                </a>
+                            </li>
+                        </ul>
                     </div>
 
                     <div class="news up" style="display: none;">
