--- a/aict/aict.html
+++ b/aict/aict.html
@@ -23,43 +23,52 @@
                     <ul>
                         <li class="drop_menu">
                             <a href="">연구원 소개</a>
-                            <ul><!--  div로 바꾸기 div안에 ul을 넣고 그 안에 li를 넣고 안에 div를 넣어서 띄운다-->
-                                <li>
-                                    <a href="">원장소개</a>
-                                    <ul>
-                                        <li><a href="">인사말</a></li>
-                                        <li><a href="">역대원장 소개</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="">일반현황</a></li>
-                                <li><a href="">비전과목표</a></li>
-                                <li>
-                                    <a href="">연구원조직</a>
-                                    <ul>
-                                        <li><a href="">조직도</a></li>
-                                        <li><a href="">직원검색</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="">윤리행동강령</a></li>
-                                <li>
-                                    <a href="">AICT홍보</a>
-                                    <ul>
-                                        <li><a href="">CI소개</a></li>
-                                        <li><a href="">홍보발간물</a></li>
-                                        <li><a href="">뉴스레터</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="">발전기금</a>
-                                    <ul>
-                                        <li><a href="">후원안내</a></li>
-                                        <li><a href="">기부금현황</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="">찾아오시는 길</a></li>
-                            </ul>
-                        </li>
-                        <li class="drop_menu">
+                            <div class="drop_left"><!--  div로 바꾸기 div안에 ul을 넣고 그 안에 li를 넣고 안에 div를 넣어서 띄운다-->
+                                <ul>
+                                    <li>
+                                        <a href="">원장소개</a>
+                                        <div class="drop_right">
+                                            <ul>
+                                                <li><a href="">인사말</a></li>
+                                                <li><a href="">역대원장 소개</a></li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                    <li><a href="">일반현황</a></li>
+                                    <li><a href="">비전과목표</a></li>
+                                    <li>
+                                        <a href="">연구원조직</a>
+                                        <ul>
+                                            <div class="drop_right">
+                                                <li><a href="">조직도</a></li>
+                                                <li><a href="">직원검색</a></li>
+                                            </div>
+                                        </ul>
+                                    </li>
+                                    <li><a href="">윤리행동강령</a></li>
+                                    <li>
+                                        <a href="">AICT홍보</a>
+                                        <ul>
+                                            <div class="drop_right">
+                                                <li><a href="">CI소개</a></li>
+                                                <li><a href="">홍보발간물</a></li>
+                                                <li><a href="">뉴스레터</a></li>
+                                            </div>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="">발전기금</a>
+                                        <ul>
+                                            <div class="drop_right">
+                                                <li><a href="">후원안내</a></li>
+                                                <li><a href="">기부금현황</a></li>
+                                            </div>
+                                        </ul>
+                                    </li>
+                                    <li><a href="">찾아오시는 길</a></li>
+                                </ul>
+                            </div>
+                        <!-- <li class="drop_menu">
                             <a href="">연구·사업</a>
                             <ul style="display: none">
                                 <li>
@@ -181,8 +190,7 @@
                                     </ul>
                                 </li>
                             </ul>
-                        </li>
-                    </ul>
+                        </li> -->
                 </nav>
 
                 <div class="utill">
@@ -356,7 +364,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="header_bg"></div>
+                <!-- <div class="header_bg"></div> -->
             </div>
         </header>
 
